[gd_scene load_steps=15 format=3 uid="uid://cw56qggysjdee"]

[ext_resource type="Script" uid="uid://mxoo4tymydaw" path="res://scenes/start_travel/start_travel.gd" id="1_5cd27"]
[ext_resource type="Texture2D" uid="uid://dle2s8a1tiyjg" path="res://art/pic/setting.png" id="1_u72xc"]
[ext_resource type="Texture2D" uid="uid://dqa20nmom0oxw" path="res://art/pic/travel.png" id="2_b478v"]
[ext_resource type="AudioStream" uid="uid://cb62n0euaif1v" path="res://art/sound/天空之城（钢琴版）.MP3" id="2_w3kh6"]
[ext_resource type="Texture2D" uid="uid://c5t3nirearp63" path="res://art/pic/Schedule.png" id="3_pue5k"]
[ext_resource type="Texture2D" uid="uid://ctatvy66ka1yv" path="res://art/pic/Insight.png" id="4_l0a4e"]
[ext_resource type="Script" uid="uid://cmmplav7f43vh" path="res://scenes/start_travel/icon.gd" id="5_7x2b5"]
[ext_resource type="PackedScene" uid="uid://d2c0re7otfbsq" path="res://scenes/popup_panel/popup_panel.tscn" id="5_aijxp"]
[ext_resource type="PackedScene" uid="uid://ds757xqcmumt5" path="res://scenes/info_panel/info_panel.tscn" id="7_odtmc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g7vj2"]
bg_color = Color(0.519271, 0.646024, 0.436917, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e2ip5"]
bg_color = Color(1, 0.933333, 0.752941, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_71wxe"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yiebx"]
bg_color = Color(0.749571, 0.560257, 0.313221, 1)

[sub_resource type="GDScript" id="GDScript_odtmc"]
script/source = "extends TextureRect

@export var target_scene:PackedScene
var ts:Node

func _ready() -> void:
	if target_scene:
		connect(\"gui_input\",_gui_input)

func _gui_input(event: InputEvent) -> void:
	if event is InputEventMouseButton:
		if event.is_released():
			get_tree().change_scene_to_packed(target_scene)
"

[node name="StartTravel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5cd27")
bg = ExtResource("2_w3kh6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="HeadPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_g7vj2")

[node name="Head" type="HBoxContainer" parent="VBoxContainer/HeadPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="Setting" type="TextureRect" parent="VBoxContainer/HeadPanel/Head"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("1_u72xc")
expand_mode = 2
stretch_mode = 4

[node name="TimeWakeValue" type="Label" parent="VBoxContainer/HeadPanel/Head"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 84
theme_override_styles/normal = SubResource("StyleBoxFlat_e2ip5")
text = "时间：
觉醒值："
vertical_alignment = 1

[node name="MoneyHealthValue" type="Label" parent="VBoxContainer/HeadPanel/Head"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.65
theme_override_font_sizes/font_size = 108
text = "金钱：
健康："
vertical_alignment = 1

[node name="ScrollContent" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 62
theme_override_styles/normal = SubResource("StyleBoxFlat_71wxe")
bbcode_enabled = true
text = "由于长期被工作压力和生活琐事困扰，你决定来一场说走就走的旅程。


"
autowrap_mode = 1

[node name="IconPanel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_yiebx")

[node name="Icon" type="HBoxContainer" parent="VBoxContainer/IconPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="VBoxContainer/IconPanel/Icon"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.82

[node name="TravelIcon" type="TextureRect" parent="VBoxContainer/IconPanel/Icon"]
layout_mode = 2
texture = ExtResource("2_b478v")
expand_mode = 3
stretch_mode = 5
script = ExtResource("5_7x2b5")

[node name="Control2" type="Control" parent="VBoxContainer/IconPanel/Icon"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.29

[node name="ScheduleIcon" type="TextureRect" parent="VBoxContainer/IconPanel/Icon"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_pue5k")
expand_mode = 3
stretch_mode = 5
script = ExtResource("5_7x2b5")
target_scene = ExtResource("7_odtmc")

[node name="Control3" type="Control" parent="VBoxContainer/IconPanel/Icon"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.29

[node name="InsightIcon" type="TextureRect" parent="VBoxContainer/IconPanel/Icon"]
layout_mode = 2
texture = ExtResource("4_l0a4e")
expand_mode = 2
stretch_mode = 4
script = SubResource("GDScript_odtmc")

[node name="Control4" type="Control" parent="VBoxContainer/IconPanel/Icon"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.82

[node name="PopupPanel" parent="." instance=ExtResource("5_aijxp")]
visible = false
